<resources>
    <string name="app_name">ESSME</string>
    <string name="leading_expert">Leading Expert</string>
    <string name="fields">Fields</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="common_expert">Expert</string>
    <string name="common_home">Home</string>
    <string name="common_account">Account</string>
    <string name="fqas">FQAs</string>
    <string name="demo_answer">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate ...</string>
    <string name="Introduction">Introduction</string>
    <string name="Expert_name">Expert Name</string>
    <string name="Position">Position</string>
    <string name="company_university">Company/University</string>
    <string name="order_expert">order Expert</string>
    <string name="hint_requirement">Enter your requirement ...</string>
    <string name="send">Send</string>
    <string name="information_technology">Information Technology</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="gets_to_know_with_essme">Gets to know with ESSME</string>
    <string name="preference_file_key">com.example.essmeapp.PREFERENCE_FILE_KEY</string>
    <string name="auth_token">auth-token</string>
    <string name="common_ok">Ok</string>
    <string name="ordert_expert_success">Order expert successfully! Click ok to continue</string>
</resources>