<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/d_8">

    <AutoCompleteTextView
        android:id="@+id/txtField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:background="@drawable/bg_rounded_8dp_no_ripple"
        android:hint="Enter the fields"
        android:padding="@dimen/d_8"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_rounded_8dp_no_ripple"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_8dp_no_ripple"
            android:backgroundTint="@color/teal_primary"
            android:padding="@dimen/d_8"
            android:text="@string/order_expert"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtContent"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:gravity="top|start"
            android:hint="@string/hint_requirement"
            android:inputType="text|textMultiLine"
            android:padding="@dimen/d_8"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnSend"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rounded_8dp_no_ripple"
            android:backgroundTint="@color/teal_primary"
            android:paddingTop="5dp"
            android:text="@string/send"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>